# machine-language

./: CMakeLists.txt  Penerjemah.cpp  Penerjemah.h  README.md  Trie.cpp  Trie.h  audioprocessor.cpp  audioprocessor.h  kamus.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
